--- a/app/views/games/_form.html.haml
+++ b/app/views/games/_form.html.haml
@@ -37,6 +37,17 @@
       %option{value: "60-90", selected: params[:play_time] == "60-90"}= "60-90 min"
       %option{value: "90-120", selected: params[:play_time] == "90-120"}= "90-120 min"
       %option{value: "120+", selected: params[:play_time] == "120+"}= "120+ min"
-
+    = f.label 'Complexity'
+    %select
+      %option{value: "1", selected: params[:complexity] == "1"}= "1"
+      %option{value: "2", selected: params[:complexity] == "2"}= "2"
+      %option{value: "3", selected: params[:complexity] == "3"}= "3"
+      %option{value: "4", selected: params[:complexity] == "4"}= "4"
+      %option{value: "5", selected: params[:complexity] == "5"}= "5"
+      %option{value: "6", selected: params[:complexity] == "6"}= "6"
+      %option{value: "7", selected: params[:complexity] == "7"}= "7"
+      %option{value: "8", selected: params[:complexity] == "8"}= "8"
+      %option{value: "9", selected: params[:complexity] == "9"}= "9"
+      %option{value: "10", selected: params[:complexity] == "10"}= "10"
   .actions
     = f.submit
