Debug form submission

--- a/app/views/games/_form.html.haml
+++ b/app/views/games/_form.html.haml
@@ -10,17 +10,18 @@
   .options
     = f.label 'Title'
     = f.text_field :title
+    = f.label 'Publisher'
+    = f.text_field :publisher
     = f.label 'Players'
-    %select
-      %option{:name => 'game[players]', :value=> '1'}="1"
-      %option{:name => 'game[players]', :value=> '2'}="2"
-      %option{:name => 'game[players]', :value=> '1-2'}="1-2"
-      %option{:name => 'game[players]', :value=> '2-4'}="2-4"
-      %option{:name => 'game[players]', :value=> '4-6'}="4-6"
-      %option{:name => 'game[players]', :value=> '6-8'}="6-8"
-      %option{:name => 'game[players]', :value=> '8+'}="8+"
+    %select{ name: 'game[players]' }
+      %option{:value=> '1', selected: params[:players] == "1"}="1"
+      %option{:value=> '2', selected: params[:players] == "2"}="2"
+      %option{:value=> '2-4', selected: params[:players] == "2-4"}="2-4"
+      %option{:value=> '4-6', selected: params[:players] == "4-6"}="4-6"
+      %option{:value=> '6-8', selected: params[:players] == "6-8"}="6-8"
+      %option{:value=> '8+', selected: params[:players] == "8+"}="8+"
     = f.label 'Age'
-    %select
+    %select{ name: 'game[age]'}
       %option{value: "2+", selected: params[:age] == "2+"}= "2+"
       %option{value: "4+", selected: params[:age] == "4+"}= "4+"
       %option{value: "6+", selected: params[:age] == "6+"}= "6+"
@@ -28,7 +29,7 @@
       %option{value: "14+", selected: params[:age] == "14+"}= "14+"
       %option{value: "18+", selected: params[:age] == "18+"}= "18+"
     = f.label 'Play Time'
-    %select
+    %select{ name: 'game[play_time]'}
       %option{value: "10", selected: params[:play_time] == "10"}= "10 min"
       %option{value: "20", selected: params[:play_time] == "20"}= "20 min"
       %option{value: "20-30", selected: params[:play_time] == "20-30"}= "20-30 min"
@@ -38,7 +39,7 @@
       %option{value: "90-120", selected: params[:play_time] == "90-120"}= "90-120 min"
       %option{value: "120+", selected: params[:play_time] == "120+"}= "120+ min"
     = f.label 'Complexity'
-    %select
+    %select{ name: 'game[complexity]'}
       %option{value: "1", selected: params[:complexity] == "1"}= "1"
       %option{value: "2", selected: params[:complexity] == "2"}= "2"
       %option{value: "3", selected: params[:complexity] == "3"}= "3"
@@ -49,7 +50,5 @@
       %option{value: "8", selected: params[:complexity] == "8"}= "8"
       %option{value: "9", selected: params[:complexity] == "9"}= "9"
       %option{value: "10", selected: params[:complexity] == "10"}= "10"
-    = f.label 'Publisher'
-    = f.text_field :publisher
   .actions
     = f.submit
