--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,5 +25,20 @@
   border: 1px solid gray;
   margin: 3px;
   padding: 10px;
+  display: flex;
 }
 
+
+.game-functionality {
+  border: 1px solid black;
+  margin-bottom: 10px;
+  padding: 5px;
+}
+
+.game-stats {
+  border: 1px solid black;
+}
+
+.game-description {
+  border: 1px solid black;
+}
