Add routes, model, and controller for reviews

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,8 +37,15 @@
 
 .game-stats {
   border: 1px solid black;
+  padding: 5px;
 }
 
 .game-description {
   border: 1px solid black;
+  padding: 5px;
+}
+
+.game-tags {
+  border: 1px solid black;
+  padding: 5px;
 }
