--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -8,7 +8,7 @@
       %p= "Play Time: #{@game.play_time}"
       %p= "Complexity: #{@game.complexity}"
       %p= "Publisher: #{@game.publisher}"
-    .tags
+    .game-tags
       %h3 Tags
       - @tags.each do |tag|
         %p= tag.tag.name
@@ -18,4 +18,10 @@
     = link_to 'Edit', edit_game_path(@game)
     = link_to 'Destroy', @game, method: :delete, data: { confirm: 'Are you sure?' }
     = link_to 'Back', games_path
+.reviews-container
+  - if @reviews
+    @reviews.each do |review|
+      %h3= review.title
+      %p= review.text
+  = form_for
 
