--- a/app/views/votes/_neutral.html.haml
+++ b/app/views/votes/_neutral.html.haml
@@ -1,4 +1,4 @@
-= form_for @vote, url: { action: "upvote" } do |f|
+= form_for @vote, url: "/games/#{@game.id}/upvote" do |f|
   = f.hidden_field :game_id, {value: @game.id}
   = f.submit "Up"
 
