--- a/app/views/games/_index.html.haml
+++ b/app/views/games/_index.html.haml
@@ -16,4 +16,5 @@
         = link_to 'Edit', edit_game_path(game)
         = link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
-= link_to 'New Game', new_game_path
+-if current_user
+  = link_to 'New Game', new_game_path
