--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -13,3 +13,4 @@
 = link_to 'New Game', new_game_path
 
 = link_to('Logout', destroy_user_session_path, :method => :delete)
+= link_to 'Add as friend', new_friend_path
