--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,4 +1,7 @@
-%h1 Hi #{@user.first_name}!
+-if current_user
+	%h1 Hi #{@current_user.first_name}!
+-else
+%h1 #{@user.first_name}'s Profile!
 %h2 Your Games Collection:
 .game-container
 	-@games.each do |game|
@@ -13,4 +16,6 @@
 = link_to 'New Game', new_game_path
 
 = link_to('Logout', destroy_user_session_path, :method => :delete)
-= link_to 'Add as friend', new_friend_path
+-if !@user.id
+	= link_to 'Add as friend', new_friend_path
+
