--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -24,7 +24,7 @@
     - @reviews.each do |review|
       %h3= review.title
       %p= review.body
-      %p= "Posted by #{review.user.username}"
+      %p= "Posted by #{User.find(review.user_id).full_name}"
   %h3 Create a New Review
   = form_for [@game, @new_review] do |f|
     = f.label 'Title'
