--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -22,9 +22,10 @@
 .reviews-container
   - if @reviews
     - @reviews.each do |review|
-      %h3= review.title
-      %p= review.body
-      %p= "Posted by #{User.find(review.user_id).full_name}"
+      .review-container
+        %h3= review.title
+        %p= review.body
+        %p= "Posted by #{User.find(review.user_id).full_name}"
   %h3 Create a New Review
   = form_for [@game, @new_review] do |f|
     = f.label 'Title'
