--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -12,7 +12,7 @@
     .game-tags
       %h3 Tags
       - @tags.each do |tag|
-        %p= tag.tag.name
+        = link_to tag.tag.name, tag.tag
     .game-description
       %p= "Description: #{@game.description}"
   .game-functionality
@@ -23,9 +23,9 @@
   - if @reviews
     - @reviews.each do |review|
       .review-container
+        %p= "Posted by #{User.find(review.user_id).full_name}"
         %h3= review.title
         %p= review.body
-        %p= "Posted by #{User.find(review.user_id).full_name}"
   %h3 Create a New Review
   = form_for [@game, @new_review] do |f|
     = f.label 'Title'
