--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -9,10 +9,11 @@
       %p= "Play Time: #{@game.play_time}"
       %p= "Complexity: #{@game.complexity}"
       %p= "Publisher: #{@game.publisher}"
-    .game-tags
-      %h3 Tags
-      - @tags.each do |tag|
-        = link_to tag.tag.name, tag.tag
+      .game-tags
+        %p#title Tags:
+        - @tags.each do |tag|
+          .game-tag
+          = link_to tag.tag.name, tag.tag
     .game-description
       %p= "Description: #{@game.description}"
   .game-functionality
@@ -20,6 +21,7 @@
     = link_to 'Destroy', @game, method: :delete, data: { confirm: 'Are you sure?' }
     = link_to 'Back', games_path
 .reviews-container
+  %h3 Reviews
   - if @reviews
     - @reviews.each do |review|
       .review-container
