--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -118,3 +118,13 @@
 .vote-count {
   margin-right: 10px;
 }
+
+.header-nav {
+  display: flex;
+  background-color: #D3D3D3;
+  justify-content: flex-start;
+}
+
+.nav-link {
+  margin-right: 20px;
+}
