--- a/app/views/layouts/_nav_bar.html.haml
+++ b/app/views/layouts/_nav_bar.html.haml
@@ -2,7 +2,7 @@
 -if current_user
   %li
     %a{:href => "/"} Home
-  %li= link_to(current_user.first_name, "/users/:id")
+  %li= link_to(current_user.first_name, user_path)
   %li= link_to('Logout', destroy_user_session_path, :method => :delete)
 -else
   %li
