--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -8,7 +8,7 @@
     .game-stats
       %h1= @game.title
       .sub-game-stats
-        %p= "Players: #{@game.title}"
+        %p= "Players: #{@game.players}"
         %p= "Age: #{@game.age}"
         %p= "Play Time: #{@game.play_time} min"
         %p= "Complexity: #{@game.complexity}"
