--- a/app/views/games/new.html.haml
+++ b/app/views/games/new.html.haml
@@ -1,3 +1,3 @@
-%h1 New Game
+%h1.games-new-container New Game
 = render 'form', game: @game
-= link_to 'Back', games_path
+.games-new-container= link_to 'Back', games_path
