--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,7 +1,7 @@
--if current_user
+- if @user.id == @current_user.id
 	%h1 Hi #{@current_user.first_name}!
--else
-%h1 #{@user.first_name}'s Profile!
+- else
+	%h1 #{@user.first_name}'s Profile!
 
 %h2 Your Games Collection:
 .game-container
@@ -15,6 +15,8 @@
 				= link_to 'Destroy', game, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
 = link_to 'New Game', new_game_path
--if !@user.id
-	= link_to 'Add as friend', new_friend_path
+
+
+-if @user.id != @current_user.id
+	= link_to 'Add as friend', user_friends_path(@user), method: :post
 
