--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -16,7 +16,16 @@
 %br/
 = link_to 'New Game', new_game_path
 
+- if @user.id == @current_user.id
+	.your-friends
+		-@your_friends.each do |friend|
+			=link_to friend.first_name, user_path(friend)
+- elsif @user.id != @current_user.id 
+	.their-friends
+		-@their_friends.each do |friend|
+			=link_to friend.first_name, user_path(friend)
 
--if @user.id != @current_user.id
+
+- if @user.id != @current_user.id && @user.id != @current_user.friends
 	= link_to 'Add as friend', user_friends_path(@user), method: :post
 
