--- a/app/views/votes/_neutral_review.html.haml
+++ b/app/views/votes/_neutral_review.html.haml
@@ -4,6 +4,6 @@
     = f.submit "Up"
 
 
-  / = form_for @vote, url: "/games/#{@game.id}/downvote" do |f|
-  /   = f.hidden_field :game_id, {value: @game.id}
-  /   = f.submit "Down"
+  = form_for @vote, url: "/reviews/#{review.id}/downvote" do |f|
+    = f.hidden_field :review_id, {value: review.id}
+    = f.submit "Down"
