--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,6 +34,12 @@
   margin-bottom: 20px;
 }
 
+.friends-container {
+  margin: auto;
+  width: 50%;
+  display: block;
+}
+
 .option {
   margin:10px;
 }
