--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,6 +51,11 @@
   flex-direction: column;
 }
 
+.add-game-container {
+  margin: auto;
+  width: 50%;
+}
+
 .games-new-container {
   margin: auto;
   width: 50%;
