--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,10 +1,10 @@
 -if @user.id != @current_user.id && !@current_user.friends.pluck(:id).include?(@user.id)
   = link_to 'Add as friend', user_friends_path(@user), method: :post
-
-- if @user.id == @current_user.id
-  %h1 Hi #{@current_user.first_name}!
-- else
-  %h1 #{@user.first_name}'s Profile!
+.games-container-index
+  - if @user.id == @current_user.id
+    %h1 Hi #{@current_user.first_name}!
+  - else
+    %h1 #{@user.first_name}'s Profile!
 - if @user.id == current_user.id
   %h1.games-container-index Your Game Collection
 - else
