--- a/app/views/tags/index.html.haml
+++ b/app/views/tags/index.html.haml
@@ -1,7 +1,13 @@
 %h1.games-container-index= "Results for Tag: #{@tag.name}"
-- if @games
-  -@games.each do |game|
-    = render '/games/index'
+.games-container-index
+  - if @games
+    -@games.each do |game|
+      %p#notice= notice
+      .game-container-index
+        .game-stats
+          .title= link_to game.title, game
+          .sub-game-stats
+
 
 .back
   .games-container-index= link_to 'Back', games_path
