--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -176,6 +176,8 @@
   display: flex;
   background-color: #D3D3D3;
   justify-content: flex-start;
+  height: 50px;
+  align-items: center;
 }
 
 .nav-link {
