--- a/app/views/games/_form.html.haml
+++ b/app/views/games/_form.html.haml
@@ -62,7 +62,7 @@
           %option{value: "10", selected: params[:complexity] == "10"}= "10"
       .option
         = f.label 'Game Photo'
-        = f.file_field :img_url
+        = f.file_field :avatar
       .option
         = f.label 'Description'
         = f.text_area :description
