--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -1,6 +1,7 @@
 
 .games-container
   %p#notice= notice
+  =image_tag "#{@game.avatar.url}"
   .game-container
     .votes
       .vote-count= @game.votes.sum(:value)
@@ -13,7 +14,6 @@
         %p= "Play Time: #{@game.play_time} min"
         %p= "Complexity: #{@game.complexity}"
         %p= "Publisher: #{@game.publisher}"
-        =image_tag"#{@game.img_url}"
       .game-tags
         %p Tags:
         - @tags.each do |tag|
