--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,10 @@
  *= require_self
  */
 
+ * { 
+  font-family: Exo;
+ }
+
 
 .game-container-index {
   width: 150px;
@@ -180,6 +184,16 @@
   align-items: center;
 }
 
+
 .nav-link {
-  margin-right: 20px;
+  margin: auto;
+  font-size: 120%;
+  font-family: Exo;
 }
+
+
+
+.img-index { 
+  width: 100px;
+  height: 100px;
+ }
