--- a/app/views/layouts/_nav_bar.html.haml
+++ b/app/views/layouts/_nav_bar.html.haml
@@ -1,8 +1,7 @@
 
 .header-nav
   -if current_user
-    .nav-link= link_to 'Game.com', games_path
-    .nav-link= link_to 'Find New Games', games_path
+    .nav-link= link_to 'Home', games_path, :class => "home-link"
     .nav-link= link_to current_user.first_name, user_path(current_user)
     .nav-link= link_to 'Logout', destroy_user_session_path, :method => :delete
   -else
