--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,10 +1,12 @@
 %html
   %head
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
-    %title ClientGameProject
+    %title AreYouBoard? 
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all'
     = javascript_include_tag 'application'
+    %link{:href => "https://fonts.googleapis.com/css?family=Rakkas", :rel => "stylesheet", :type => "text/css"}/
   = render partial: '/layouts/nav_bar'
+
   %body
   = yield
