--- a/app/views/games/_index.html.haml
+++ b/app/views/games/_index.html.haml
@@ -2,7 +2,7 @@
   %script{:type => "/app/stylesheets/application.css"} :cdata
 
 %p#notice= notice
-%h1.games-container-index Games
+%h1.games-container-index Are You Board?
 .games-container-index
   - if @games
     - @games.each do |game|
@@ -14,6 +14,7 @@
 
 %br/
 -if current_user
-  .games-container-index= link_to 'New Game', new_game_path
+  .games-container-index
+    .new-game-btn= link_to 'Add a New Game', new_game_path
 
 
