--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -229,5 +229,13 @@ h1 {
   position: absolute;
   right: 170px;
   top: 10px;
+
+  border: 1px solid #00FF7C;
+  border-radius: 5px;
+  box-shadow: 0px 5px 0px #00823F;
+  transition: all ease .2s;
 }
 
+.new-game-btn:active {
+  box-shadow: 0 3px 0 #00823F;
+}
