Make pictures clickable. Make add new game button clickable

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -214,12 +214,17 @@ h1 {
   border-radius: 5px 5px 5px 5px;
  }
 
+ .img-index:active{
+  box-shadow: 7px 7px 2px #5b5e5c;
+  transform: translateY(5px);
+ }
+
  .reg-form {
   width: 300px;
   margin: 10em;
  }
 
-.new-game-btn a{ 
+.new-game-btn{ 
   background-color: #ffb347 ;
   border-radius: 5px 5px 5px 5px;
   color: white;
@@ -228,14 +233,14 @@ h1 {
   font-size:15px;
   position: absolute;
   right: 170px;
-  top: 10px;
+  top: 60px;
+}
 
-  border: 1px solid #00FF7C;
-  border-radius: 5px;
-  box-shadow: 0px 5px 0px #00823F;
-  transition: all ease .2s;
+.new-game-btn:hover{
+  background-color: #eda540;
 }
 
 .new-game-btn:active {
-  box-shadow: 0 3px 0 #00823F;
+  box-shadow: 3px 3px 3px #5b5e5c;
+  transform: translateY(4px);
 }
