--- a/app/views/games/show.html.haml
+++ b/app/views/games/show.html.haml
@@ -1,7 +1,7 @@
 
 .games-container
   %p#notice= notice
-  =image_tag "#{@game.avatar.url}", :class => "img-index"
+  =image_tag "#{@game.avatar.url}"
   .game-container
     .votes
       .vote-count= @game.votes.sum(:value)
