Add hamburger nav bar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,6 +20,8 @@
 
 h1 {
   font-size: 300%;
+  padding-left: 200px;
+  padding-top: 20px ;
 }
 
 .game-container-index {
@@ -163,7 +165,6 @@ h1 {
   align-items: center;
 }
 
-
 .vote-buttons {
   display: flex;
   width: 40px;
@@ -176,8 +177,12 @@ h1 {
   margin-right: 10px;
 }
 
-.header-nav a{
-  position: absolute; 
+/****/ 
+
+/**NAV BAR **/ 
+
+/*.header-nav a{*/
+/*  position: absolute; 
   transition: 0.3s; 
   padding: 15px; 
   width: 100px; 
@@ -185,28 +190,123 @@ h1 {
   font-size: 20px; 
   color: white; 
   border-radius: 5px 5px 5px 5px;
-  margin-top: 101px;
+  margin-top: 101px;*/
+/*}*/
+
+
+#menuToggle
+{
+  display: block;
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  
+  z-index: 1;
+  
 }
 
-.nav-link a:hover  {
-  left: 50;
+#menuToggle input
+{
+  display: block;
+  width: 40px;
+  height: 32px;
+  position: absolute;
+  top: -7px;
+  left: -5px;
+  
+  cursor: pointer;
+  
+  opacity: 0; 
+  z-index: 2;
+  
+  -webkit-touch-callout: none;
 }
 
-.home-link {
-  top: 20px;
-  background-color: #4CAF50;
+#menuToggle span
+{
+  display: block;
+  width: 33px;
+  height: 4px;
+  margin-bottom: 5px;
+  position: relative;
+  
+  background: #cdcdcd;
+  border-radius: 3px;
+  
+  z-index: 1;
+  
+  transform-origin: 4px 0px;
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+              opacity 0.55s ease;
 }
 
-.user-link {
-  top: 80px;
-  background-color: #2196F3; 
+#menuToggle span:first-child
+{
+  transform-origin: 0% 0%;
 }
 
-.log-link {
-  top: 140px;
-  background-color: #f44336; 
+#menuToggle span:nth-last-child(2)
+{
+  transform-origin: 0% 100%;
 }
 
+#menuToggle input:checked ~ span
+{
+  opacity: 1;
+  transform: rotate(45deg) translate(-2px, -1px);
+  background: #232323;
+}
+
+#menuToggle input:checked ~ span:nth-last-child(3)
+{
+  opacity: 0;
+  transform: rotate(0deg) scale(0.2, 0.2);
+}
+
+#menuToggle input:checked ~ span:nth-last-child(2)
+{
+  opacity: 1;
+  transform: rotate(-45deg) translate(0, -1px);
+}
+
+#menu
+{
+  position: fixed;
+  width: 90px;
+  height: 100%;
+  margin: -100px 0 0 -50px;
+  padding: 50px;
+  padding-top: 125px;
+  
+  background: #685d5d;
+  list-style-type: none;
+ 
+  transform-origin: 0% 0%;
+  transform: translate(-100%, 0);
+  
+  transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+#menu a { 
+  text-decoration: none;
+  color: white; 
+ }
+
+#menu li
+{
+  padding: 10px 0;
+  font-size: 22px;
+}
+
+#menuToggle input:checked ~ ul
+{
+  transform: scale(1.0, 1.0);
+  opacity: 1;
+}
+
+/****/ 
 .img-index { 
   width: 200px;
   height: 200px;
@@ -219,10 +319,6 @@ h1 {
   transform: translateY(5px);
  }
 
- .reg-form {
-  width: 300px;
-  margin: 10em;
- }
 
 .new-game-btn{ 
   background-color: #ffb347 ;
